select and delete

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a:hover { color: #036; }
 #map_canvas { height: 100% }
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
-
+.is-selected { background-color: aqua }
 
 
 
